syntax = "proto3";

package com.makarytskyi.internalapi.reqreply;

import "com/makarytskyi/internalapi/model/order/order.proto";
import "com/makarytskyi/internalapi/error/error.proto";

option java_multiple_files = true;

message CreateOrderProtoRequest {
  model.order.Order order = 1;
}

message CreateOrderProtoResponse {
  oneof response {
    Success success = 1;
    error.Error error = 2;
  }
}

message Success {
  model.order.Order order = 1;
}
