syntax = "proto3";

package com.makarytskyi.rentcar.proto.reqreply.patch;

import "com/makarytskyi/internalapi/model/order/patch.proto";
import "com/makarytskyi/internalapi/model/order/order.proto";
import "com/makarytskyi/internalapi/error/error.proto";

option java_multiple_files = true;

message PatchOrderProtoRequest {
  string id = 1;
  internalapi.model.order.Patch patch = 2;
}

message PatchOrderProtoResponse {
  oneof response {
    Success success = 1;
    internalapi.error.Error error = 2;
  }
}

message Success {
  internalapi.model.order.Order order = 1;
}
